# llm-wiki-starter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: agent-task.md  decision.md  knowledge-note.md  maintenance.md  review.md  source-ingest.md  wiki-health-check.md  (+1 more)
docs/: agent-runbook.md  architecture.md  issue-workflow.md  obsidian-conventions.md  query-workflow.md  search.md  source-ingest-policy.md  wiki-health-lint.md  workflow.md
knowledge/: README.md  karpathy-llm-wiki-pattern-summary.md  llm-wiki-pattern.md
meta/: index.md  log.md  source-registry.md
projects/: README.md  epub-ingest-oss-tooling-decision.md
reviews/: wiki-health-check-template.md
src/llm_wiki_wizard/templates/wiki/: LICENSE  README.md  pyproject.toml
src/llm_wiki_wizard/templates/wiki/docs/: agent-runbook.md  obsidian-conventions.md  search.md  source-ingest-policy.md  wiki-health-lint.md
src/llm_wiki_wizard/templates/wiki/docs/templates/: decision.md  knowledge-note.md  source-map.md  workstream.md
src/llm_wiki_wizard/templates/wiki/meta/: index.md  log.md  source-registry.md
src/llm_wiki_wizard/templates/wiki/projects/milestones/: README.md
src/llm_wiki_wizard/templates/wiki/raw/: README.md
src/llm_wiki_wizard/templates/wiki/reviews/: README.md
src/llm_wiki_wizard/templates/wiki/tools/: validate_repo.py
src/llm_wiki_wizard/templates/wiki/tools/source-ingest/pdf/: README.md  ingest_pdf.py
tests/: test_epub_ingest_docs.py  test_search_wiki.py  test_validate_repo_health.py  test_wizard_installer.py
tools/: search_wiki.py  validate_repo.py
(+23 files in other folders)
