[project]
name = "llm-wiki-starter"
version = "0.1.1"
description = "A starter for an agent-maintained Markdown wiki."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "copier>=9.0",
  "PyYAML>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.scripts]
llm-wiki = "llm_wiki_wizard.cli:app"

[dependency-groups]
dev = []
pdf = [
  "docling>=2.93,<3",
  "pandas>=2.0",
  "pypdf>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki_wizard"]
