[project]
name = "llm-wiki-workspace"
version = "0.1.1"
description = "A namespaced agent-maintained Markdown wiki workspace."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "PyYAML>=6.0",
]

[dependency-groups]
dev = []
pdf = [
  "docling>=2.93,<3",
  "pandas>=2.0",
  "pypdf>=6.0",
]

[tool.uv]
package = false
